--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "start": "node dist/index.js",
     "dev": "nodemon",
+    "seed": "ts-node ./src/scripts/adminSeeder.ts",
     "build": "tsc"
   },
   "keywords": [],
@@ -13,6 +14,7 @@
   "description": "",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "colors": "^1.4.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
@@ -20,6 +22,7 @@
     "express-rate-limit": "^7.4.1",
     "helmet": "^8.0.0",
     "hpp": "^0.2.3",
+    "inquirer": "^12.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.8.1",
     "uninstall": "^0.0.0",
