--- a/package.json
+++ b/package.json
@@ -20,12 +20,15 @@
     "express": "^4.21.1",
     "express-mongo-sanitize": "^2.2.0",
     "express-rate-limit": "^7.4.1",
+    "firebase-admin": "^13.0.1",
     "helmet": "^8.0.0",
     "hpp": "^0.2.3",
     "inquirer": "^12.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.8.1",
+    "multer": "^1.4.5-lts.1",
     "uninstall": "^0.0.0",
+    "uuid": "^11.0.3",
     "winston": "^3.17.0",
     "xss-clean": "^0.1.4"
   },
@@ -37,6 +40,7 @@
     "@types/helmet": "^0.0.48",
     "@types/hpp": "^0.2.6",
     "@types/jsonwebtoken": "^9.0.7",
+    "@types/multer": "^1.4.12",
     "@types/node": "^22.9.0",
     "nodemon": "^3.1.7",
     "ts-node": "^10.9.2",
