--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "chalk": "^5.4.1",
     "cloudinary": "^2.0.3",
     "cors": "^2.8.5",
+    "csv-parser": "^3.2.0",
+    "csv-writer": "^1.6.0",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "helmet": "^8.1.0",
