--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "start": "node server.js",
     "dev": "nodemon server.js",
     "seed:superadmin": "node ./src/scripts/seedSuperAdmin.js",
-    "test": "jest --detectOpenHandles"
+    "test": "jest --detectOpenHandles",
+    "reports:generate": "node ./src/scripts/generateReports.js",
+    "reports:daily": "node ./src/scripts/generateReports.js daily",
+    "reports:weekly": "node ./src/scripts/generateReports.js weekly"
   },
   "keywords": [
     "support",
@@ -38,6 +41,7 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "multer-storage-cloudinary": "^4.0.0",
+    "node-cron": "^3.0.3",
     "resend": "^4.2.0",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
