--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "start": "node server.js",
     "dev": "nodemon server.js",
     "seed:superadmin": "node ./src/scripts/seedSuperAdmin.js",
+    "seed:permissions": "node ./src/scripts/seed-permissions.js",
+    "remove:dispatch": "node ./src/scripts/remove-dispatch-permissions.js",
     "test": "jest --detectOpenHandles",
     "reports:generate": "node ./src/scripts/generateReports.js",
     "reports:daily": "node ./src/scripts/generateReports.js daily",
