--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "csv-parser": "^3.2.0",
     "csv-writer": "^1.6.0",
     "dotenv": "^16.4.7",
+    "exceljs": "^4.4.0",
     "express": "^4.21.2",
     "helmet": "^8.1.0",
     "http-status-codes": "^2.3.0",
