--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
+    "axios": "^1.9.0",
     "bcryptjs": "^2.4.3",
     "chalk": "^5.4.1",
     "cloudinary": "^2.0.3",
@@ -35,6 +36,7 @@
     "dotenv": "^16.4.7",
     "exceljs": "^4.4.0",
     "express": "^4.21.2",
+    "form-data": "^4.0.2",
     "helmet": "^8.1.0",
     "http-status-codes": "^2.3.0",
     "inquirer": "^12.5.0",
